flac: dynamically (re)size encoder buffer
This avoids buffer overflows in an obvious way.  In the
common case, the malloc overhead is only incurred once as
callers rarely (never?) resize buffers within a flow.

ref: Buffer overrun during FLAC encoding - ID: 3474924
http://sourceforge.net/tracker/?func=detail&aid=3474924&group_id=10706&atid=110706

--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,8 @@ File formats:
   o Fix Ogg Vorbis files with certain numbers of channels being
     truncated. (Ulrich Klauer)
   o Fix reading 64-bit float WAVs. [3481510] (nu774 and Ulrich Klauer)
+  o Fix potential buffer overrun when writing FLAC files directly via
+    sox_write(). [3474924] (Eric Wong)
 
 Audio device drivers:
 
